# gimp-mcp

./: .gitignore  README.md  gimp-api-scraper.py  gimp-mcp-client.py  gimp-mcp-plugin.py  gimp-mcp-server.py  gimp_mcp_client.py  gimp_mcp_server.py  main.py  pyproject.toml  server.py
src/gimp_mcp/: server.py
