[project]
name = "gimp-mcp"
version = "0.1.1"
description = "Gimp 3.0 integration through the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "libreearth", email = "your.email@example.com"},
    {name = "SgtRaccoon", email = "your.email@example.com"}
]
license = {text = "MIT"}
dependencies = [
    "mcp[cli]>=1.3.0",
]

[project.scripts]
gimp-mcp = "gimp_mcp.server:main"
